top section done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mehedi's Mission 2022</title>
+    <!-- google font link -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <!-- custom css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+
+    <!-- top section html start hrer -->
+
+    <section class="top-section margin-top-bottom">
+        <div class="display-flex-class">
+        <div class="half-width">
+            <div class="display-flex-class">
+                <div class="title-border"></div>
+                <h1>Stay Focused on <span class="color-orange">Mission 2022</span></h1>
+               
+            </div>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
+                referrentur, at eam falli deterruisset. No duo populo 
+                animal noluisse, enim</p>
+                <a class="all-button" href="#">Explore Now</a>
+                <p>Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/mypic.png" alt="Mehedi's Image">
+        </div>
+    </div>
+    </section>
+    <!-- top section html end here -->
+
 </body>
 </html>
