--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Mehedi's Mission 2022</title>
     <!-- google font link -->
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto:wght@500&family=Rubik:wght@400;500&family=The+Nautigal:wght@700&display=swap" rel="stylesheet">
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +17,7 @@
 
     <!-- top section html start hrer -->
 
-    <section class="top-section margin-top-bottom">
+    <section class="top-section margin-top">
         <div class="display-flex-class">
         <div class="half-width">
             <div class="display-flex-class">
@@ -35,5 +38,89 @@
     </section>
     <!-- top section html end here -->
 
+
+<!-- mission and vission area html start here -->
+    <section class="mission-vission-section margin-top">
+        <h1>My Mission in  <span class="color-orange">2022</span> </h1>
+        <div class="display-flex-class mission_vission_center">
+            <div class="mission_vission">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div class="mission_vission">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h2>Vission</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+            <div class="mission_vission">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p>Amet minim mollit non deserunt 
+                    ullamco est sit aliqua dolor do amet 
+                    sint. Velit officia consequat duis enim 
+                    velit mollit.</p>
+            </div>
+        </div>    
+    </section>
+     <!-- mission and vission section html end here -->
+
+
+    <!-- developer limites html section start here -->
+    <section id="developer-coding-bg"  class="developer-limite-area margin-top">
+        <div class="display-flex-class">
+            <div class="developer-item">
+                <img src="images/pictures/coding.png" alt="">
+
+            </div>
+            <div class="developer-item">
+                <h2>Develop <br> Without Limits</h2>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                    deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+                    mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+                    dissentias et cum.</p>
+                    <a class="all-button" href="#">Read the Documentation</a>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- mission and vission section html start here -->
+
+
+    <!-- Community html stare here -->
+    <section class="community-area margin-top">
+        <div class="display-flex-class">
+        <div class="developer-item community-item">
+            <h2>Know our <br> Global Community</h2>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
+                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
+                dissentias et cum.</p>
+                <a class="all-button" href="#">Read the Documentation</a>
+        </div>
+        <div id="community-bg" class="developer-item">
+            <img src="images/pictures/project.png" alt="">
+
+        </div>
+    </div>
+    </section>
+    <!-- community html end here -->
+
+
+
+<!-- footer section html start here -->
+    <footer class="footer-area">
+        <h1>Mission <span class="">2022</span> </h1>
+        <p>Hard work, Perseverance, and Determination for 202</p>
+
+    </footer>
+    <!-- footer section html end here -->
 </body>
 </html>
