blog section done

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
                 <h1>Stay Focused on <span class="color-orange">Mission 2022</span></h1>
                
             </div>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit 
-                referrentur, at eam falli deterruisset. No duo populo 
-                animal noluisse, enim</p>
+            <p>I have been working in the development world for a long time but one thing I always missed was the guidelines. I have received the guideline this time. I firmly started 2022 with Programming Hero</p>
                 <a class="all-button" href="#">Explore Now</a>
                 <p>Scroll down to explore more about us</p>
         </div>
@@ -46,26 +44,17 @@
             <div class="mission_vission">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h2>Mission</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>I want 2022 to fulfill all my desires. And I can do a good job in the future. I am with the programming hero with this mission</p>
             </div>
             <div class="mission_vission">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h2>Vission</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>I will do something good in the future and be a good person. I think programming heroes will help me to fulfill this vision</p>
             </div>
             <div class="mission_vission">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h2>Goals</h2>
-                <p>Amet minim mollit non deserunt 
-                    ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit.</p>
+                <p>My goal is to make the world remember me even after my death. And I want to be like some people who are now controlling the world with technology</p>
             </div>
         </div>    
     </section>
@@ -81,10 +70,7 @@
             </div>
             <div class="developer-item">
                 <h2>Develop <br> Without Limits</h2>
-                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                    deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                    mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                    dissentias et cum.</p>
+                <p>I think there should be no time limit in this development sector. Because this is a sector where the value of your flag will never go in vain</p>
                     <a class="all-button" href="#">Read the Documentation</a>
             </div>
         </div>
@@ -99,10 +85,7 @@
         <div class="display-flex-class">
         <div class="developer-item community-item">
             <h2>Know our <br> Global Community</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-                deterruisset. No duo populo animal noluisse, enim deterruisset eos et. An 
-                mundi noster pri, ea eos quas expetendis scripserit, affert gubergren 
-                dissentias et cum.</p>
+            <p>Some companies are controlling the world today. Which may not exist after 56 years from today. So I have to build myself in such a way that I can lead that empty space. We have to build a community that keeps the world beautiful</p>
                 <a class="all-button" href="#">Read the Documentation</a>
         </div>
         <div id="community-bg" class="developer-item">
@@ -114,9 +97,50 @@
     <!-- community html end here -->
 
 
+    <!-- My Blog section html start here -->
+    <section class="blog-area margin-top">
+        <p>VISIT MY BLOG AND KEEP YOUR FEEDBACK</p>
+        <h1>My Blog</h1>
+        <div class="display-flex-class">
+            <div class="blog-item">
+                <div class="blog-img">
+                    <img src="images/illustrators/apps.svg" alt="">
+                </div>
+                <div class="blog-content">
+                    <h2><a href="#">Mobile Apps Design and Development</a></h2>
+                </div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-img">
+                    <img src="images/illustrators/web.svg" alt="">
+                </div>
+                <div class="blog-content">
+                    <h2><a href="#">Website Design and Development</a></h2>
+                </div>
+            </div>
+            <div class="blog-item">
+                <div class="blog-img">
+                    <img src="images/illustrators/undraw_internet_on_the_go_re_vben.svg" alt="">
+                </div>
+                <div class="blog-content">
+                    <h2><a href="#">Internet Security And protection</a></h2>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+    <!-- My Blog section html end here -->
+
+
+
+
 
 <!-- footer section html start here -->
-    <footer class="footer-area">
+    <footer class="footer-area margin-top">
         <h1>Mission <span class="">2022</span> </h1>
         <p>Hard work, Perseverance, and Determination for 202</p>
 
