--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
         <h1>My Mission in  <span class="color-orange">2022</span> </h1>
         <div class="display-flex-class mission_vission_center">
             <div class="mission_vission">
-                <img src="images/illustrators/illustrator-1.png" alt="">
+                <img src="images/illustrators/illustrator-1.png" alt="bg image">
                 <h2>Mission</h2>
                 <p>I want 2022 to fulfill all my desires. And I can do a good job in the future. I am with the programming hero with this mission</p>
             </div>
             <div class="mission_vission">
-                <img src="images/illustrators/illustrator-2.png" alt="">
+                <img src="images/illustrators/illustrator-2.png" alt="bg image">
                 <h2>Vission</h2>
                 <p>I will do something good in the future and be a good person. I think programming heroes will help me to fulfill this vision</p>
             </div>
             <div class="mission_vission">
-                <img src="images/illustrators/illustrator-3.png" alt="">
+                <img src="images/illustrators/illustrator-3.png" alt="bg image">
                 <h2>Goals</h2>
                 <p>My goal is to make the world remember me even after my death. And I want to be like some people who are now controlling the world with technology</p>
             </div>
@@ -65,7 +65,7 @@
     <section id="developer-coding-bg"  class="developer-limite-area margin-top">
         <div class="display-flex-class">
             <div class="developer-item">
-                <img src="images/pictures/coding.png" alt="">
+                <img src="images/pictures/coding.png" alt="Codding Image">
 
             </div>
             <div class="developer-item">
@@ -89,7 +89,7 @@
                 <a class="all-button" href="#">Read the Documentation</a>
         </div>
         <div id="community-bg" class="developer-item">
-            <img src="images/pictures/project.png" alt="">
+            <img src="images/pictures/project.png" alt="Project image">
 
         </div>
     </div>
@@ -104,7 +104,7 @@
         <div class="display-flex-class">
             <div class="blog-item">
                 <div class="blog-img">
-                    <img src="images/illustrators/apps.svg" alt="">
+                    <img src="images/illustrators/apps.svg" alt="Apps image">
                 </div>
                 <div class="blog-content">
                     <h2><a href="#">Mobile Apps Design and Development</a></h2>
@@ -112,7 +112,7 @@
             </div>
             <div class="blog-item">
                 <div class="blog-img">
-                    <img src="images/illustrators/web.svg" alt="">
+                    <img src="images/illustrators/web.svg" alt="Website image">
                 </div>
                 <div class="blog-content">
                     <h2><a href="#">Website Design and Development</a></h2>
@@ -120,7 +120,7 @@
             </div>
             <div class="blog-item">
                 <div class="blog-img">
-                    <img src="images/illustrators/undraw_internet_on_the_go_re_vben.svg" alt="">
+                    <img src="images/illustrators/undraw_internet_on_the_go_re_vben.svg" alt="Internet on the go image">
                 </div>
                 <div class="blog-content">
                     <h2><a href="#">Internet Security And protection</a></h2>
